--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 
 
-    <footer class="bg-dark text-center text-light p-4">
+    <footer class="bg-info text-center text-light p-4">
         <p class="mb-0">Mallén Arenas 2020. Todos los derechos reservados.</p>
     </footer>
 
